# git-ragchat

./: .gitignore  Makefile  main.py  pyproject.toml  ragchat.db  server.py  uvicorn_err.txt  uvicorn_out.txt
src/: main.py
src/api/: __init__.py  router.py
src/api/v1/: __init__.py  chat.py  chunks.py  collections.py  dicts.py  files.py  knowledge.py  router.py  user.py
src/config/: settings.py
src/core/: __init__.py  api_contract.py  config.py  constant.py  database.py  embedding_manager.py  logging_config.py  response_code.py
src/dao/: __init__.py  ai_ext_message_dao.py  base_dao.py  chunk_dao.py  collection_dao.py  data_dictionary_dao.py  embedding_dao.py  file_dao.py  knowledge_dao.py  user_dao.py  user_history_dao.py
src/dao/sql/: chunk_query.sql.j2  file_query.sql.j2
src/db/: pg_db.py
src/dto/: __init__.py  ai_ext_message_dto.py  chunk_dto.py  chunk_embedding_dto.py  collection_dto.py  data_dict_dto.py  embedding_dto.py  file_dto.py  knowledge_dto.py  user_dto.py
src/handler/: chat_handler.py  chat_model_handler.py  knowledge_handler.py
src/job/: scheduler_setup.py
src/models/: __init__.py  chat.py  embedding.py  knowledge.py  memory.py  retrieval.py  setting.py  user.py
src/repositories/: knowledge_repo.py
src/schemas/: knowledge.py
src/services/: __init__.py  base_service.py  chunk_service.py  collection_service.py  data_dictionary_service.py  embedding_service.py  file_service.py  knowledge_service.py  partition_handler.py  user_servcie.py  vector_service.py
src/utils/: logger.py  sql_template_manager.py
(+5 files in other folders)
