[project]
name = "ragchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.8",
    "langchain-core>=1.4.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "uvicorn>=0.49.0",
]
